--- a/digital-banking-solutions.html
+++ b/digital-banking-solutions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
- <title>Logixal Inc | Your trusted Oracle Omni channel experience specialist and Oracle specialist partner</title>
+ <title>Logixal Inc</title>
  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
  <meta name="description" content="Our USP lies in extracting the maximum value and features from Oracle Flexcube suite, thereby enabling our clients to utilise the full breadth of digital banking and also helping them create an omni-channel banking experience that meets their customers' expectations">
  <meta name="keywords" content="FCDB, OBDX, Oracle FLEXCUBE Direct Banking, Oracle Banking Digital Experience, Internet Banking, Mobile Banking, Mobile Applications, consulting, Retail Banking, Corporate Banking">
@@ -79,25 +79,27 @@
    <div class="row defban">
     <h2 class="text-danger text-center font21 mb3 mt2">How we define ourselves in Banking</h2>
     <div class="col-md-6 col-sm-12">
-     <div class="defban-wrapper defban1">
-      <p>Specialist <strong class="text-danger">Oracle</strong> <strong class="text-blue"> Gold Partner</strong> for their Digital Banking solutions. </p>
+     <div class="defban-wrapper defban3">
+      <p>100% track record in delivering <strong class="text-blue">successful</strong> and <strong class="text-blue">on-budget projects</strong>.</p>
+      <!-- <p>Specialist <strong class="text-danger">Oracle</strong> <strong class="text-blue"> Gold Partner</strong> for their Digital Banking solutions. </p> -->
      </div>
     </div>
     <div class="col-md-6 col-sm-12">
      <div class="defban-wrapper defban2">
-      <p>100% track record in delivering <strong class="text-blue">successful</strong> and <strong class="text-blue">on-budget projects</strong>.</p>
-     </div>
-    </div>
-    <div class="col-md-6 col-sm-12">
-     <div class="defban-wrapper defban3">
-      <p>Oracle Banking Digital Experience <strong class="text-blue">(OBDX)</strong> and Oracle FLEXCUBE Direct Banking <strong class="text-blue">(FCDB)</strong>. </p>
-     </div>
-    </div>
-    <div class="col-md-6 col-sm-12">
-     <div class="defban-wrapper defban4">
+      <!-- <p>100% track record in delivering <strong class="text-blue">successful</strong> and <strong class="text-blue">on-budget projects</strong>.</p> -->
       <p>Our approach is one of being a <strong class="text-blue">trusted partner</strong> focussed on success and <strong class="text-blue">win-win outcome</strong>. </p>
      </div>
     </div>
+    <!-- <div class="col-md-6 col-sm-12">
+     <div class="defban-wrapper defban3">
+      <p>Oracle Banking Digital Experience <strong class="text-blue">(OBDX)</strong> and Oracle FLEXCUBE Direct Banking <strong class="text-blue">(FCDB)</strong>. </p>
+     </div>
+    </div> -->
+    <!-- <div class="col-md-6 col-sm-12">
+     <div class="defban-wrapper defban4">
+      <p>Our approach is one of being a <strong class="text-blue">trusted partner</strong> focussed on success and <strong class="text-blue">win-win outcome</strong>. </p>
+     </div>
+    </div> -->
    </div>
   </div>
  </section>
@@ -111,23 +113,23 @@
      </div>
     </div>
     <div class="col-md-6 col-sm-12">
-     <div class="ors-wrapper ors2">
-      <p>Integrating Oracle's Digital Banking solutions with the Bank's core banking system and other third party systems </p>
+     <div class="defban-wrapper defban3">
+      <p>Integrating Digital Banking solutions with the Bank's core banking system and other third party systems </p>
      </div>
     </div>
     <div class="col-md-6 col-sm-12">
      <div class="ors-wrapper ors3">
-      <p class="">Building customizations on Oracle's Digital Banking solutions in an extensible manner. </p>
+      <p class="">Building customizations on Digital Banking solutions in an extensible manner. </p>
      </div>
     </div>
     <div class="col-md-6 col-sm-12">
      <div class="ors-wrapper ors4">
-      <p class="">Training Services on Oracle's Digital Banking solution</p>
+      <p class="">Training Services on Digital Banking solutions</p>
      </div>
     </div>
     <div class="col-md-6 col-sm-12">
      <div class="ors-wrapper ors5">
-      <p class="">Migrating Bank's existing Internet / Mobile Banking to Oracle's Digital Banking solutions.</p>
+      <p class="">Migrating Bank's existing Internet / Mobile Banking</p>
      </div>
     </div>
    </div>
@@ -173,7 +175,7 @@
          <div class="col-xs-3 col-md-2"> <img src="images\02e-offeredbylogixal.png" class="img-responsive center-block" alt=""> </div>
          <div class="col-xs-9 col-md-10">
           <p class="text-blue font16"><strong>Data Migration Tools</strong></p>
-          <p>We use a "template" based approach to migrate from the Bank's Internet Banking / Mobile Banking solution to Oracle's Digital Banking Solution. We have ready migration tools for migrating Banks with Oracle's older Digital Banking solution into the latest Digital Banking solution from Oracle. </p>
+          <p>We use a "template" based approach to migrate from the Bank's Internet Banking / Mobile Banking solution. We have ready migration tools for migrating Banks with a template based approach </p>
          </div>
         </div>
        </div>
@@ -189,7 +191,7 @@
           <p>We understand the need of the hour for financial institutions to "digitize" themselves. Digitalization itself is inclusive of Enablement of Digital Self Service Channels, Automation of Processes etc. Banks have been in existence since a long time and through this journey, have seen transformations of various types an overhaul of systems and processes. Digitalization is one such transformation and we see it slightly differently. We believe digitalization can be achieved through a Digital Enablement Layer which can be built around the Bank's existing system without impacting or needing them to change. </p>
           <p> A few examples of Digital Enablement by us are:- </p>
           <p class="text-blue font16"><strong>Electronic Funds Transfer System Interface</strong></p>
-          <p>Integration component between Oracle FLEXCUBE Universal Banking and the Local Clearing System to enable Real Time Payments in the Domestic Network.</p>
+          <p>Integration component between banks core banking system and the Local Clearing System to enable Real Time Payments in the Domestic Network.</p>
           <p class="text-blue font16"><strong>Store and Forward (SAF) of financial and non-financial transactions</strong></p>
           <p>Storing of channel initiated requests in the Digital Enablement Layer for channel functionalities which do not have a corresponding support in the Core Banking System.</p>
           <p class="text-blue font16"><strong>Document Management</strong></p>
