added necessary changes

--- a/data-engineering-suite.html
+++ b/data-engineering-suite.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
- <title>Logixal Inc | Your trusted Oracle Omni channel experience specialist and Oracle specialist partner</title>
+ <title>Logixal Inc</title>
  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
  <meta name="description" content="An end to end ecommerce and e banking solutions provider that enables your enterprise to operate with industry standards">
  <meta name="keywords" content="Atg, ecommerce websites, b2b ecommerce, e-commerce consulting, oracle e commerce, best e-commerce, oracle e commerce platform">
@@ -161,7 +161,7 @@
      </div>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 text-right footercustomcolor">
-     <p class="text-center font-footer"> Logixal Solutions - Copyright &copy; 2017. All rights reserved </p>
+     <p class="text-center font-footer"> Logixal Solutions - Copyright &copy; 2022. All rights reserved </p>
     </div>
    </div>
   </div>
