--- a/join-logixal.html
+++ b/join-logixal.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
- <title>Logixal Inc | Your trusted Oracle Omni channel experience specialist and Oracle specialist partner</title>
+ <title>Logixal Inc</title>
  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
  <meta name="description" content="Consider Logixal if you want to be on the thresold of new technology and new ways of doing business which will enrich your knowledge and epxerience and provide you with the state of art technology, knwoledge and facilities">
  <meta name="keywords" content="Atg,  websites, b2b , e-commerce consulting, oracle e commerce, best e-commerce, oracle e commerce platform">
@@ -257,7 +257,7 @@ target="_blank">20 Commerce Drive, Ste. 135, Cranford, NJ 07016.
      </div>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 text-right footercustomcolor">
-     <p class="text-center font12"> <small>Logixal Solutions - Copyright &copy; 2017. All rights reserved</small> </p>
+     <p class="text-center font12"> <small>Logixal Solutions - Copyright &copy; 2022. All rights reserved</small> </p>
     </div>
    </div>
   </div>
