--- a/application-management-services.html
+++ b/application-management-services.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
- <title>Logixal Inc | Your trusted Oracle Omni channel experience specialist and Oracle specialist partner</title>
+ <title>Logixal Inc</title>
  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
  <meta name="description" content="We provide comprehensive 24 X 7 support for your Oracle Commerce implemtation and have a diverese experience in maintaining and enhancing your Oracle Commerce applications">
  <meta name="keywords" content="Atg, ecommerce websites, b2b ecommerce, e-commerce consulting, oracle e commerce, best e-commerce, oracle e commerce platform">
@@ -180,7 +180,7 @@
      </div>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 text-right footercustomcolor">
-     <p class="text-center font12"> <small>Logixal Solutions - Copyright &copy; 2017. All rights reserved</small> </p>
+     <p class="text-center font12"> <small>Logixal Solutions - Copyright &copy; 2022. All rights reserved</small> </p>
     </div>
    </div>
   </div>
