added changes for changing of UK address

--- a/index.html
+++ b/index.html
@@ -385,9 +385,14 @@
         <p class="Country-region-name"> Europe, Middle East &amp; Africa </p>
         <br>
         <p class="company-title-bold-font"><strong>Logixal Solutions Private Limited</strong> </p>
-        <p class="address-logixal">88 Wood Street,
+        <p class="address-logixal">126-134, Baker Street,
+          <br> <strong>London </strong> W1U 6U, <strong>UK.</strong>
+          <br> Phone: +44 783 446 1261 
+         </p>
+        <!-- <p class="address-logixal">88 Wood Street,
          <br> <strong>London </strong> EC2V 7RS, <strong>UK.</strong>
-         <br> Phone: +44 783 446 1261 </p>
+         <br> Phone: +44 783 446 1261 
+        </p> -->
        </div>
       </div>
       <!-- <div class="col-md-3 col-sm-6 col-xs-12 kd-fix-3">
